# arduino_led_controller

./: CMakeLists.txt  config.cfg  main.c
interfaces/: interface.c  interface.h
led_widget/: led_widget.c  led_widget.h
main_window/: grid_widget.h  main_window_init.h
structures/: config.c  config.h  led.c  led.h
